# guidance-power-manager

./: CMakeLists.txt  Messages.sh  README  guidance-power-manager.desktop  guidance-power-manager.py  guidance-power-manager.ui  powermanage.py
cmake-modules/: FindPyDBus.cmake  FindPyDBus.py
debian/: changelog  control  copyright  rules  watch
debian/patches/: int-conversion.diff  python26.diff  series
modules/: CMakeLists.txt  ixf86misc.c  xf86misc.py
po/: CMakeLists.txt
po/ca/: guidance-power-manager.po
po/ca@valencia/: guidance-power-manager.po
po/cs/: guidance-power-manager.po
po/de/: guidance-power-manager.po
po/el/: guidance-power-manager.po
po/en_GB/: guidance-power-manager.po
po/eo/: guidance-power-manager.po
po/es/: guidance-power-manager.po
po/et/: guidance-power-manager.po
po/fr/: guidance-power-manager.po
po/ga/: guidance-power-manager.po
po/gl/: guidance-power-manager.po
po/hr/: guidance-power-manager.po
po/is/: guidance-power-manager.po
po/it/: guidance-power-manager.po
po/km/: guidance-power-manager.po
po/ko/: guidance-power-manager.po
po/lt/: guidance-power-manager.po
po/lv/: guidance-power-manager.po
po/ml/: guidance-power-manager.po
po/nb/: guidance-power-manager.po
po/nds/: guidance-power-manager.po
po/nl/: guidance-power-manager.po
po/nn/: guidance-power-manager.po
po/pa/: guidance-power-manager.po
po/pl/: guidance-power-manager.po
po/pt/: guidance-power-manager.po
po/pt_BR/: guidance-power-manager.po
po/ro/: guidance-power-manager.po
po/ru/: guidance-power-manager.po
po/sk/: guidance-power-manager.po
po/sv/: guidance-power-manager.po
po/tr/: guidance-power-manager.po
po/uk/: guidance-power-manager.po
po/zh_CN/: guidance-power-manager.po
po/zh_TW/: guidance-power-manager.po
