GET_FILENAME_COMPONENT(PYTHON_LIB_INSTALL "${PYTHON_LIBRARY}" PATH)
GET_FILENAME_COMPONENT(SITEPACKAGE "${PYTHON_LIB_INSTALL}/../site-packages" ABSOLUTE)

ADD_LIBRARY(ixf86misc SHARED ixf86misc.c)
SET_TARGET_PROPERTIES(ixf86misc PROPERTIES PREFIX "")
include_directories(${PYTHON_INCLUDE_PATH})
TARGET_LINK_LIBRARIES(ixf86misc -L/usr/X11R6/lib -lX11 -lXxf86vm -lXext -lXrandr -lXrender -lXss ${PYTHON_LIBRARY})

INSTALL(TARGETS ixf86misc DESTINATION "${PYTHON_SITE_PACKAGES_DIR}")
INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/xf86misc.py" DESTINATION "${PYTHON_SITE_PACKAGES_DIR}")
